fix: force Flowplayer full screen icon alignment on mobile

--- a/src/styles/components/_flowplayer.scss
+++ b/src/styles/components/_flowplayer.scss
@@ -48,4 +48,18 @@
 	.c-video-player-inner {
 		background-color: $silver !important;
 	}
+
+	// Using padding 1em because rem-based $spacer-sm causes misalignment (Flowplayer uses em-based layout)
+	.fp-header {
+		align-items: center !important;
+		padding: 1em !important;
+
+		.fp-right {
+			display: flex !important;
+			align-items: center !important;
+			justify-content: flex-end !important;
+			flex: 1 !important;
+			text-align: right !important;
+		}
+	}
 }
